<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat Demo</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="message_connect">connected</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>


    <string name="dummy_username">グーグル</string>
    <string name="dummy_unread_message">A</string>
    <string name="empty_user">NO USER</string>
    <string name="empty_blog">NO BLOG AVAILABLE</string>

    <string name="text_empty"></string>

    <string name="dummy_long_message">123213113123112321311312312312312312123123123313223213112321311312312312312312123123123313223213112321311312312312312312123123123313223213123123123121231231233132232131\n131312312312\n12312312312\n12312312312323123\n312312312312\1312312312312\n123213113123123123123121231231233132232131\n123213113123123123123121231231233132232131\n123213113123123123123121231231233132232131</string>
    <string name="dummy_short_message">Hi How r u ?</string>
    <string name="dummy_pritty_simple"> hi </string>
    <string name="dummy_middle_message">Hi How r u ? Have good day ahead?</string>


    <string name="btn_blog_share">Share Blog</string>
    <string name="btn_blog_details">Show Blog</string>
</resources>