<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- First Row -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_blog_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/imageview_blog_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/layout_blog_picture"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_blog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_blog_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:padding="5dp"
                android:text="@string/dummy_long_message"
                android:textColor="?android:textColorPrimary"
                android:textSize="13sp" />
        </LinearLayout>


    </RelativeLayout>

    <!-- Second Row -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_share_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_blog_share" />

        <Button
            android:id="@+id/btn_blog_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_share_blog"
            android:text="@string/btn_blog_details" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@drawable/drawable_horizontal_line" />
</LinearLayout>